add alle the basic features

--- a/styles/index.less
+++ b/styles/index.less
@@ -9,3 +9,4 @@
 @import (once) "../components/search-bar/search-bar.less";
 @import (once) "../components/page-article/page-article.less";
 @import (once) "../components/page-title/page-title.less";
+@import (once) "../components/video-block/video-block.less";
