--- a/components/page-article/page-article.less
+++ b/components/page-article/page-article.less
@@ -7,9 +7,7 @@
 
 .page-article__text-block {
   width: 240px;
-  margin-right: 30px;
-  margin-top: auto;
-  margin-bottom: 100px;
+  margin: auto 20px 200px 20px;
   display: flex;
   flex-direction: column;
   opacity: 0;
@@ -82,6 +80,7 @@
 }
 
 .animated-rectangle--large {
+  opacity: 0;
   max-width: 1200px;
   width: 100%;
   overflow: hidden;
@@ -94,6 +93,7 @@
 }
 
 .animated-rectangle {
+  opacity: 0;
   position: relative;
   margin-left: auto;
   width: 25vw;
