--- a/components/video-block/video-block.less
+++ b/components/video-block/video-block.less
@@ -3,10 +3,15 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 786px;
-  height: 520px;
-  top: -75px;
-  margin-left: 90px;
+  width: 100%;
+  height: 100%;
+
+  @media(min-width: 1024px) {
+    width: 786px;
+    height: 520px;
+    top: -75px;
+    margin-left: 90px;
+  }
 }
 
 .video-block {
@@ -34,7 +39,7 @@
     position: absolute;
     width: 15px;
     height: 15px;
-    top: 23px;
+    top: 25px;
     left: 27px;
   }
 
@@ -60,8 +65,8 @@ svg.video-block__controls-arc--hide {
   & > path {
     stroke: var(--red);
     stroke-width: 3;
-
   }
+
   & > line {
     opacity: 0;
     stroke: var(--red);
