--- a/styles/index.less
+++ b/styles/index.less
@@ -10,3 +10,4 @@
 @import (once) "../components/page-article/page-article.less";
 @import (once) "../components/page-title/page-title.less";
 @import (once) "../components/video-block/video-block.less";
+@import (once) "../components/animated-rect/animated-rect.less";
