fine tune animations part 1

--- a/components/animated-rect/animated-rect.less
+++ b/components/animated-rect/animated-rect.less
@@ -7,6 +7,14 @@
   margin-right: 150px;
 }
 
+.animated-rect__container {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+}
+
 .animated-rect__rect {
   position: absolute;
   top: 75px;
