--- a/components/page-header-top/page-header-top.less
+++ b/components/page-header-top/page-header-top.less
@@ -9,9 +9,13 @@
 }
 
 .page-header-top__block {
-  display: flex;
-  align-items: center;
-  font-size: 0.625rem;
+  display:none;
+
+  @media(min-width: 768px) {
+    display: flex;
+    align-items: center;
+    font-size: 0.625rem;
+  }
 }
 
 .page-header-top__block-text {
