--- a/components/search-bar/search-bar.less
+++ b/components/search-bar/search-bar.less
@@ -1,11 +1,7 @@
-.search {
-
-}
-
 .search__input {
   border-radius: 2px;
   border: solid 1px lightgrey;
-  padding: 5px 10px;
+  padding: calc(var(--spacing-s)/2) var(--spacing-s);
   width: 150px;
 }
 .search__input::placeholder {
