--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,6 +1,11 @@
 :root {
   --font-sans: Myriad Pro, Roboto, Verdana, sans-serif;
+
   --blue: #7782a1;
   --dark-blue: #012c5c;
   --red: #ff1a3e;
+
+  --spacing-s: 10px;
+  --spacing-m: 20px;
+  --spacing-l: 40px;
 }
