--- a/components/nav-list/nav-list.less
+++ b/components/nav-list/nav-list.less
@@ -7,8 +7,8 @@
 }
 
 .nav-list__item{
-	padding: 10px;
-	margin: 10px;
+	padding: var(--spacing-s);
+	margin: var(--spacing-s);
 }
 
 .nav-list__item-link {
