--- a/components/page-header-top/page-header-top.less
+++ b/components/page-header-top/page-header-top.less
@@ -22,7 +22,7 @@
   color: var(--blue);
   text-transform: uppercase;
   border-right: 1px solid;
-  padding: 0 10px;
+  padding: 0 var(--spacing-s);
   font-weight: 500;
 }
 
