--- a/components/page-header/page-header.less
+++ b/components/page-header/page-header.less
@@ -2,7 +2,7 @@
 	width: 100%;
   display: flex;
   height: 100px;
-  margin-bottom: 40px;
+  margin-bottom: calc(var(--spacing-m)*2);
   flex-direction: column;
   border-bottom: 1px solid lightgrey;
 }
